--- a/package.json
+++ b/package.json
@@ -3,13 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "2.2.7",
     "@testing-library/jest-dom": "5.17.0",
     "@testing-library/react": "13.4.0",
     "@testing-library/user-event": "13.5.0",
+    "axios": "1.7.7",
+    "bignumber.js": "9.1.2",
     "mediasoup-client": "3.7.16",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "5.3.0",
+    "react-loader-spinner": "6.1.6",
+    "react-redux": "9.1.2",
+    "react-router-dom": "6.26.2",
     "react-scripts": "5.0.1",
+    "redux-persist": "6.0.0",
+    "sass": "1.78.0",
+    "seedrandom": "3.0.5",
+    "sha256": "0.2.0",
     "socket.io-client": "4.7.5",
     "web-vitals": "2.1.4"
   },
